# cvc-dataset

./: LICENSE
canonical_vocabulary_compression_dataset/: .gitignore  DATASET_STATISTICS.md  IMPROVEMENTS_TODO.md  README.md
canonical_vocabulary_compression_dataset/data/: sample_training_data_canonical.txt  sample_training_data_canonical_rust_py.txt  sample_training_data_original.txt  training_data_canonical.txt  training_data_original.txt
canonical_vocabulary_compression_dataset/docs/: README.md
canonical_vocabulary_compression_dataset/evaluation/: basic_metrics.json  benchmark_tasks.json  classification_benchmark.json  meaning_retention_scores.json  mock_real_evaluation_results.json  qa_benchmark.json  semantic_similarity_benchmark.json
canonical_vocabulary_compression_dataset/mappings/: synonym_to_canonical.json
canonical_vocabulary_compression_dataset/rust_cvc/: Cargo.toml  README.md
canonical_vocabulary_compression_dataset/rust_cvc/src/: lib.rs  main.rs  python.rs
canonical_vocabulary_compression_dataset/scripts/: apply_cvc.py  apply_cvc_rust.py  basic_evaluation.py  demo_usage.py  evaluate_meaning_retention.py  expand_mappings.py  generate_evaluation_data.py  generate_training_data.py  mock_real_evaluation.py  requirements.txt
