[package]
name = "rust_cvc"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_cvc"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["cli"]
python = ["pyo3"]
cli = ["clap"]

[dependencies.pyo3]
version = "0.22"
features = ["extension-module"]
optional = true

[dependencies.clap]
version = "4.0"
features = ["derive"]
optional = true
